 * The suggestion list for units is now much more useful.
 * The suggestion list now has a warning in the tooltip when inserting spells that interfere with the names of equivalencies.
 * The suggestion list now pops up a help message the first time it is shown.
 * The group sorting option to sort by duration now treats spells that are on the GCD as having no cooldown.


 * Bug Fixes:
 ** Buff/Debuff icons that are set to sort by low duration should now properly display unlimited duration auras when there is nothing else to display.
 ** The Ranged Attack Power condition should now always use the proper RAP value.
 ** Fixed some "You are not in a raid group" errors.

===v6.2.0===
 * New Icon Type: Buff/Debuff Check (for checking missing raid buffs).
 * New advanced feature: Lua Snippets
 * New advanced icon event handler: Lua Execution
 
 * Mass refactoring has taken place. You will need to restart WoW when upgrading to this version of TellMeWhen.
 * Multi-state Cooldown icons can now keep track of spell charges.
 * Added a new setting to the Runes condition that allows you to force the condition to check for non-death runes.
 * Rune icons can now distinguish between checking normal runes and death runes.
 * Rune icons have an option to show extra unusable runes as charges.
 * Added a buff equivalency to track absorbtion shields ("DamageShield").
 
 * New Conditions:
 ** NPC ID
 ** Weekday
 ** Time of Day
 ** Quest Complete
 ** Spell Cast Count
 ** Absorbtion shield amount
 ** Unit Incoming heals
 
 * Bug Fixes:
 ** The IncreasedStats equivalency should now always properly check for the Legacy of the Emperor buff
 ** Groups being moved (dragged around) should now much  more reliably detatch from your cursor when they are supposed to.
 ** Fixed an accidental inversion of the 1st param to TMW_LOCK_TOGGLED
 ** Replaced Blood Pact with Dark Intent for the IncreasedStamina equivalency.
 ** The "All Types" setting for Loss of Control icons should now work as intended.